src/App.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Press+Start+2P&display=swap');

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  width: 100vw;
}

.button-container {
  height: 30vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
}

button {
  width: 500px;
  height: 100px;
  font-size: 50px;
  margin: 75px 0 50px 0;
  background-color: lightgray;
  color: gray;
  font-family: 'Press Start 2P';
  text-shadow: -1px -1px black, 1px 1px white;
  border: none;
  border-radius: 8px;
  box-shadow: 0 0.6em gray;
}

button:hover {
  background-color: rgb(195, 194, 194);
  cursor: pointer;
}

button:active {
   box-shadow: none;
   position: relative;
   top: 0.6em;
}

.img-container {
  height: 35vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
}

.img {
  width: auto;
  height: 80%;
  margin-bottom: 3%;
  filter: drop-shadow(0 0 30px #2d17a8);
}

.img-rotate {
  animation: rotate 0.6s linear both;
}

@keyframes rotate {
  0% {
    transform: scale(1) rotateZ(0);
  }

  50% {
    transform: scale(1.5) rotateZ(180deg);
  }

  100% {
    transform: scale(1) rotateZ(360deg);
  }
}

.quote-container {
  height: 35vh;
  width: 100vw;
  /* font-family: 'Press Start 2P';
  font-size: 20px; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* color: #2cdb1c;
  line-height: 1.5; */
}

@media screen and (max-width: 391px) {
  main {
    flex-direction: column-reverse;
    height: 100vh;
  }

  .button-container {
    height: 25vh;
  }

  .quote-container {
    height: 40vh;
  }

  .img-container {
    height: 35vh;
  }

  img {
    margin: 5% 0 0 5%;
    height: 300px;
  }

  button {
    margin: 0 0 50px 0;
    font-size: 30px;
    width: 300px;
  }

  p {
    font-size: 16px;
  }
}

